refactor some code

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<link rel="stylesheet" type="text/css" href="styles/graph.css">
 	<link rel="stylesheet" type="text/css" href="styles/headers.css">
 	<link rel="stylesheet" type="text/css" href="styles/month-table.css">
+	<link rel="stylesheet" type="text/css" href="styles/axis-tooltip.css">
+	<link rel="stylesheet" type="text/css" href="styles/wrappers.css">
 
 </head>
 <body>
@@ -23,26 +25,27 @@
 				ACR20 responce rate %
 			</div>
 			<div class="graph-wrapper">
+
 			 	<ul class="y-axis-values">
 					<li>
 						<span>100</span>
-						<span class="tooltiptext">100</span>
+						<span class="tooltip-text">100</span>
 					</li>
 					<li>
 						<span>80</span>
-						<span class="tooltiptext">80</span>
+						<span class="tooltip-text">80</span>
 					</li>
 					<li>
 						<span>60</span>
-						<span class="tooltiptext">60</span>
+						<span class="tooltip-text">60</span>
 					</li>
 					<li>
 						<span>40</span>
-						<span class="tooltiptext">40</span>
+						<span class="tooltip-text">40</span>
 					</li>
 					<li>
 						<span>20</span>
-						<span class="tooltiptext">20</span>
+						<span class="tooltip-text">20</span>
 					</li>
 					<li>
 						<span>0</span>
@@ -63,16 +66,16 @@
 					<li>ALL XEL|ANZ monotherapy</li>
 				</ul>
 
-				<ul class="x-axis-values" id="lol">
-				   <li>0</li><!--
-				--><li>12</li><!--
-				--><li>24</li><!--
-				--><li>36</li><!--
-				--><li>48</li><!--
-				--><li>60</li><!--
-				--><li>72</li><!--
-				--><li>84</li><!--
-				--><li>90</li>
+				<ul class="x-axis-values">
+				    <li>0</li><!--
+				 --><li>12</li><!--
+				 --><li>24</li><!--
+				 --><li>36</li><!--
+				 --><li>48</li><!--
+				 --><li>60</li><!--
+				 --><li>72</li><!--
+				 --><li>84</li><!--
+				 --><li>90</li>
 				</ul>
 			</div>
 		</div>
